--- a/backend/control/templates/base.html
+++ b/backend/control/templates/base.html
@@ -1,14 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load django_browser_reload %}
+{% django_browser_reload_script %}
 
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
+
+    <!-- Tailwindcss -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
-    {% block content %}{% endblock %}
+<body class="bg-stone-900">
+    <header>
+        <div>
+            <div></div>
+        </div>
+    </header>
+    
+    <main class="">
+        {% block content %}{% endblock %}
+    </main>
 </body>
-
 </html>
