--- a/backend/control/templates/users.html
+++ b/backend/control/templates/users.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <div class="w-4xl bg-zinc-800 mx-auto p-2 rounded-b-md">
     <div class="flex flex-col gap-2 text-center items-center">
         <h1>Bem-vindo ao Painel de Controle</h1>
@@ -9,3 +12,4 @@
         </form>
     </div>
 </div>
+{% endblock %}
