--- a/backend/control/templates/control_panel.html
+++ b/backend/control/templates/control_panel.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <div class="w-4xl bg-zinc-800 mx-auto p-2 rounded-b-md">
     <div class="flex flex-col gap-2 text-center">
         <h1>Bem-vindo ao Painel de Controle</h1>
@@ -5,3 +8,4 @@
         <p>Sobre</p>
     </div>
 </div>
+{% endblock %}
