--- a/backend/control/templates/films.html
+++ b/backend/control/templates/films.html
@@ -1,9 +1,14 @@
-<div class="w-4xl bg-zinc-800 mx-auto p-2 rounded-b-md space-y-2">
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="w-4xl bg-zinc-800 mx-auto p-2 rounded-b-md space-y-2 shadow-md">
     <!-- Card para adicionar novo Filme -->
-    <div class="bg-zinc-700 flex flex-col gap-2 text-center items-center rounded-sm p-2">
+    <div class="bg-zinc-700 flex flex-col gap-2 text-center items-center rounded-sm p-2 shadow-md">
         <h1 class="font-semibold">Adicionar novo Filme</h1>
 
-        <form method="" class="flex flex-col gap-2 text-gray-500">
+        <form method="POST" class="flex flex-col gap-2 text-gray-500">
+            {% csrf_token %}
+            
             {{ form.name }}
 
             {{ form.description }}
@@ -31,15 +36,54 @@
                 {{ form.ticket_url }}
             </div>
 
-            <button type="submit" class="w-40 mx-auto bg-green-800 hover:bg-green-600 p-2 rounded-sm text-white font-semibold">
+            <button name="form_type" value="add_form" type="submit" class="w-40 mx-auto bg-green-800 hover:bg-green-600 p-2 rounded-sm text-white font-semibold cursor-pointer transition shadow-md">
                 Salvar
             </button>
         </form>
     </div>
 
-    <!-- Lista de filmes -->
-    <div class="bg-zinc-700 flex flex-col gap-2 text-center items-center rounded-sm p-2">
-        <h1 class="font-semibold">Adicionar novo Filme</h1>
+    <!-- Pesquisa do sistema -->
+    <div class="bg-zinc-700 flex flex-col gap-2 text-center rounded-sm p-2 shadow-md">
+        <input id="search-files" type="search" placeholder="Procurar filme..." class="w-full max-w-md bg-zinc-800 rounded-sm p-2 shadow-md">
+    </div>
 
+    <!-- Lista de filmes -->
+    <div class="bg-zinc-700 flex flex-col gap-2 text-center items-center rounded-sm p-2 shadow-md">
+        <h1 class="font-semibold">Lista de filmes</h1>
+
+        <table class="w-full text-center">
+            <thead>
+                <tr class="bg-zinc-950 font-semibold text-sm text-gray-400">
+                    <th class="p-1">Nome do Filme</th>
+                    <th class="p-2">Criado em</th>
+                    <th class="p-2">Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for film in films %}
+                <tr class="bg-zinc-900 hover:bg-zinc-800 transition cursor-pointer">
+                    <td class="p-2">{{ film.name }}</td>
+                    <td class="p-2">{{ film.created_at }}</td>
+                    <td class="p-2 flex flex-row justify-center items-center gap-2">
+                        <!-- Link para a página de editar filme -->
+                        <a href="#" class="bg-green-800 hover:bg-green-600 p-2 rounded-sm cursor-pointer transition font-semibold">
+                            Editar
+                        </a>
+
+                        <!-- Form do pra deletar filme -->
+                        <form method="POST">
+                        {% csrf_token %}
+                            <input type="number" class="hidden" name="film_id" value="{{ film.id }}">
+
+                            <button name="form_type" value="delete_form" class="bg-red-800 hover:bg-red-600 p-2 rounded-sm cursor-pointer transition font-semibold">
+                                Deletar
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
+{% endblock %}
