--- a/backend/control/templates/films.html
+++ b/backend/control/templates/films.html
@@ -49,12 +49,13 @@
 
     <!-- Lista de filmes -->
     <div class="bg-zinc-700 flex flex-col gap-2 text-center items-center rounded-sm p-2 shadow-md">
-        <h1 class="font-semibold">Lista de filmes</h1>
+        <h1 class="font-semibold">Lista de filmes adicionados</h1>
 
         <table class="w-full text-center">
             <thead>
                 <tr class="bg-zinc-950 font-semibold text-sm text-gray-400">
                     <th class="p-1">Nome do Filme</th>
+                    <th class="p-2">Visualização</th>
                     <th class="p-2">Criado em</th>
                     <th class="p-2">Ações</th>
                 </tr>
@@ -63,10 +64,11 @@
                 {% for film in films %}
                 <tr class="bg-zinc-900 hover:bg-zinc-800 transition cursor-pointer">
                     <td class="p-2">{{ film.name }}</td>
+                    <td class="p-2">{{ film.get_display_display  }}</td>
                     <td class="p-2">{{ film.created_at }}</td>
                     <td class="p-2 flex flex-row justify-center items-center gap-2">
                         <!-- Link para a página de editar filme -->
-                        <a href="#" class="bg-green-800 hover:bg-green-600 p-2 rounded-sm cursor-pointer transition font-semibold">
+                        <a href="{% url 'film-edit' film.id %}" class="bg-green-800 hover:bg-green-600 p-2 rounded-sm cursor-pointer transition font-semibold">
                             Editar
                         </a>
 
