--- a/backend/control/templates/category/categories.html
+++ b/backend/control/templates/category/categories.html
@@ -19,7 +19,7 @@
 
     <!-- Pesquisa do sistema -->
     <div class="bg-zinc-700 flex flex-col gap-2 text-center rounded-sm p-2 shadow-md">
-        <input id="search-files" type="search" placeholder="Procurar filme..." class="w-full max-w-md bg-zinc-800 rounded-sm p-2 shadow-md">
+        <input id="search-files" type="search" placeholder="Procurar categoria..." class="w-full max-w-md bg-zinc-800 rounded-sm p-2 shadow-md">
     </div>
 
     <!-- Lista de Categorias -->
