--- a/backend/control/templates/control_panel.html
+++ b/backend/control/templates/control_panel.html
@@ -2,10 +2,38 @@
 
 {% block content %}
 <div class="w-4xl bg-zinc-800 mx-auto p-2 rounded-b-md">
-    <div class="flex flex-col gap-2 text-center">
-        <h1>Bem-vindo ao Painel de Controle</h1>
+    <div class="flex flex-col gap-4 text-center">
+        <h1 class="font-semibold">Bem-vindo ao Painel de Controle</h1>
 
-        <p>Sobre</p>
+        <p>Gerenciamento do site principal, para <b>criação</b>, <b>edição</b> e <b>exclusão</b> de dados</p>
+
+        <ul class="flex flex-col gap-6">
+            <li>
+                <a href="{% url 'users' %}" class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
+                    Usuários
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'films' %}" class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
+                    Filmes
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'categories' %}" class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
+                    Categorias
+                </a>
+            </li>
+        </ul>
+
+        <hr class="border-gray-600">
+
+        <p>Qualquer problema procure o suporte imediatamente.</p>
+
+        <span class="text-sm text-gray-500">Versão: 1.0.0</span>
+
+        <hr class="border-gray-600">
+
+        <span class="text-sm text-gray-500">&copy; 2026 - Xzhyan, JhonathanDelgado16</span>
     </div>
 </div>
 {% endblock %}
