--- a/backend/control/templates/user/users.html
+++ b/backend/control/templates/user/users.html
@@ -16,7 +16,7 @@
             {{ form.password2 }}
 
             <div class="flex items-center gap-2">
-                <label for="is_active" class="text-gray-300">Marque para ativar o usuário: </label>
+                <label for="is_active" class="text-gray-300">Marque para criar um usuário já ativo: </label>
                 {{ form.is_active }}
             </div>
 
