--- a/backend/control/templates/base.html
+++ b/backend/control/templates/base.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-zinc-900 text-gray-300">
+<body class="bg-zinc-950 text-gray-300">
     <!-- Pop-up de mensagens -->
     {% if messages %}
     <div class="fixed top-5 right-5 space-y-2 z-50">
@@ -29,7 +29,7 @@
     {% endif %}
 
 
-    <header class="w-full bg-zinc-950 flex p-4 items-center justify-between shadow-md">
+    <header class="sticky top-0 z-40 w-full bg-zinc-950 flex p-4 items-center justify-between shadow-md border-b border-gray-700">
         <h1 class="font-semibold">
             CinemaProject
             <span class="font-normal text-gray-500">
