--- a/backend/control/templates/user/users.html
+++ b/backend/control/templates/user/users.html
@@ -38,7 +38,7 @@
         <table class="w-full text-center">
             <thead>
                 <tr class="bg-zinc-950 font-semibold text-sm text-gray-400">
-                    <th class="p-1">Nome do Filme</th>
+                    <th class="p-1">Nome do Usuário</th>
                     <th class="p-2">Staff</th>
                     <th class="p-2">Status</th>
                     <th class="p-2">Ações</th>
