adicionado um accordion no film

--- a/backend/control/templates/film/film_edit.html
+++ b/backend/control/templates/film/film_edit.html
@@ -35,6 +35,17 @@
 
                 <hr>
 
+                <div class="flex flex-row flex-wrap gap-4">
+                    {% for checkbox in form.version %}
+                        <label class="flex items-center gap-2">
+                            {{ checkbox.tag }}
+                            <span>{{ checkbox.choice_label }}</span>
+                        </label>
+                    {% endfor %}
+                </div>
+
+                <hr>
+
                 <div class="flex flex-row justify-center items-center gap-4">
                     <span>Classificação Indicativa: {{ form.age_rating }}</span>
 
