--- a/backend/control/templates/base.html
+++ b/backend/control/templates/base.html
@@ -117,6 +117,7 @@
         }
         document.addEventListener("DOMContentLoaded", function () {
         enableSearch("search-files", "tbody tr");
+        enableSearch("search-files", "label");
         });
     </script>
 </body>
