--- a/backend/control/templates/film/films.html
+++ b/backend/control/templates/film/films.html
@@ -42,14 +42,14 @@
 
                 <hr>
 
-                <div class="flex flex-row flex-wrap gap-4">
+                <!-- <div class="flex flex-row flex-wrap gap-4">
                     {% for checkbox in form.version %}
                         <label class="flex items-center gap-2">
                             {{ checkbox.tag }}
                             <span>{{ checkbox.choice_label }}</span>
                         </label>
                     {% endfor %}
-                </div>
+                </div> -->
 
                 <hr>
 
